# aegis-memory

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  VULN_TRIAGE_TASKS.md  alembic.ini  docker-compose.yml  osv-scanner.toml  plan.md  pyproject.toml  youtube-transcript.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  migration-check.yml  pip-audit.yml  release.yml  scorecard.yml
aegis-memory-v1.2.0/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
aegis-memory-v1.2.0/.github/workflows/: ci.yml
aegis-memory-v1.2.0/aegis_memory/: client.py
aegis-memory-v1.2.0/aegis_memory/cli/: __init__.py
aegis-memory-v1.2.0/aegis_memory/integrations/: __init__.py  crewai.py  langchain.py
aegis-memory-v1.2.0/docs/: CLI-REFERENCE.md
aegis-memory-v1.2.0/k8s/: aegis.yaml  configmap.yaml  postgres.yaml
aegis-memory-v1.2.0/migrations/: 001_initial.sql  002_ace_tables.sql  README.md
aegis-memory-v1.2.0/server/: Dockerfile  ace_repository.py  database.py  embedding_service.py  eval_repository.py  rate_limiter.py  requirements.txt  routes.py  routes_ace.py  routes_dashboard.py
aegis-memory-v1.2.0/tests/: conftest.py
aegis_memory/: __init__.py  cli.py  client.py  demo.py  extractors.py  filters.py  guard.py  mcp_server.py  scope_policy.py  smart.py
aegis_memory/cli/: __main__.py  main.py
aegis_memory/client/: __init__.py  _async.py  _models.py  _parsers.py  _sync.py
aegis_memory/inspect/: __init__.py  _scanner_bridge.py  analyzer.py  bindings.py  cases.py  findings.py  fixgen.py  htmlmap.py  interproc.py  notebooks.py  policies.py  replay.py  report.py  sarif.py  score.py  sinks.py  taint.py
aegis_memory/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py
aegis_memory/local/: __init__.py  _embeddings.py  _integrity.py  _schema.py  _scope.py  _storage.py  _temporal.py
aegis_memory/security/: __init__.py
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_memory_shared_agents.py  0003_typed_memory.py  0004_ace_runs.py  0005_interaction_events.py  0006_temporal_decay.py  0007_content_security.py  0008_context_hub.py  0009_memory_depth.py
benchmarks/: dataset.jsonl  generate_dataset.py  machine_profile.py  query_workload.py  results.json  run_benchmark.py  run_benchmark.sh
benchmarks/injection/: .gitignore  AUDIT_PHASE0.md  README.md  __init__.py  _paths.py  datasets.py  metrics.py  osv-scanner.toml  render_report.py  requirements.txt  run_benchmark.py  systems.py
docs/: ACE-PATTERNS.md  DESIGN.md  INTEGRATIONS.md  OPERATIONS.md  README.md  SMART-MEMORY.md  mint.json
docs/Recipes/: 02-session-recovery-coding.md  03-cross-repo-knowledge.md  04-code-review-swarm.md  06-debugging-agent-reflection.md  10-support-agent-memory.md
docs/api-reference/: cli.mdx
docs/deployment/: backup-restore.mdx  migrations.mdx  production-checklist.mdx
docs/guides/: ace-patterns.mdx  aegis-skill.md  architecture-rfc-v1.mdx  interaction-events.mdx  observability.mdx  performance-benchmarks.mdx  production-deployment.mdx  security.mdx  smart-memory.mdx  telemetry-contract.mdx  temporal-decay.mdx  typed-memory.mdx
docs/integrations/: crewai.mdx  langchain.mdx  langgraph.mdx  mcp-clients.mdx
docs/introduction/: concepts.mdx  overview.mdx  why-aegis.mdx
docs/issues/: buffer-memory-mode.md  inspect-coverage-policy.md  inspect-followups.md  second-wave.md
docs/quickstart/: first-memory.mdx  installation.mdx  with-crewai.mdx
docs/security/: benchmark.md  vuln-triage.md
examples/: ROADMAP.md  ace_demo.py  langgraph_basic.py  local_mode.py
examples/aegis-demo-support-agent/: README.md  _demo_common.py  osv-scanner.toml  run_with_aegis.py  run_without_aegis.py  support_agent_graph.py
examples/aegis-memory-firewall/: README.md  _demo_common.py  agent_memory_map.html  build_memory_map.py  requirements.txt  run_with_aegis.py  run_without_aegis.py
k8s/: README.md  namespace.yaml  secret.yaml
migrations/: 003_memory_events.sql  004_project_auth.sql
playbooks/: README.md  genesis.json
playbooks/community/: README.md
plugins/aegis/: .mcp.json  README.md
scripts/: validate_plugin_manifests.py
server/: .dockerignore  Dockerfile  ace_repository.py  auth.py  backfill_acl.py  config.py  consolidation.py  content_security.py  context_bundle.py  contradiction_detector.py  database.py  embedding_service.py  eval_repository.py  event_repository.py  hybrid_retrieval.py  integrity.py  interaction_repository.py  main.py  memory_authz.py  memory_graph.py  memory_repository.py  models.py  observability.py  observability_events.py  osv-scanner.toml  playbook_loader.py  prompt_repository.py  rate_limiter.py  requirements.txt  routes.py  routes_ace.py  routes_dashboard.py  scope_inference.py  scope_policy.py  skill_repository.py  subagent_repository.py  temporal_decay.py  trust_levels.py
server/api/: app.py
server/infra/: config.py
server/integrations/: __init__.py  langfuse_exporter.py  langsmith_exporter.py
tests/: conftest.py  test_ace_loop.py  test_acl.py  test_adapter_temperature.py  test_async_client.py  test_auth.py  test_authz_bypass.py  test_consolidation.py  test_content_security.py  test_content_security_no_drift.py  test_context_hub.py  test_cors.py  test_guard.py  test_hybrid_retrieval.py  test_injection_adaptive.py  test_injection_benchmark_datasets.py  test_injection_benchmark_systems.py  test_injection_probe.py  test_inspect.py  test_interaction_events.py  test_langgraph_integration.py  test_local_client.py  test_local_embeddings.py  test_local_storage.py  test_mcp_local_mode.py  test_mcp_server.py  test_memory.py  test_memory_depth.py  test_memory_update.py  test_migrations.py  test_prune.py  test_rate_limiter_redis.py  test_rate_limiter_unified.py  test_scope_policy_no_drift.py  test_skill_packaging.py  test_temporal_decay.py  test_trust_level_fix.py  test_typed_memory.py  test_version.py
(+137 files in other folders)
